@@ -31,6 +31,8 @@
 #define _GNU_SOURCE
 #include <pthread.h>
 
+#include <time.h>
+
 #define AGS_TYPE_THREAD                (ags_thread_get_type())
 #define AGS_THREAD(obj)                (G_TYPE_CHECK_INSTANCE_CAST((obj), AGS_TYPE_THREAD, AgsThread))
 #define AGS_THREAD_CLASS(class)        (G_TYPE_CHECK_CLASS_CAST(class, AGS_TYPE_THREAD, AgsThreadClass))
